--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,8 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
 		<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#00316b">
-		<link rel="shortcut icon" href="/favicons/favicon.ico">
+		<!-- Note: update v if changing -->
+		<link rel="shortcut icon" href="/favicons/favicon.ico?v=v1">
 		<meta name="apple-mobile-web-app-title" content="League Page">
 		<meta name="application-name" content="League Page">
 		<meta name="msapplication-TileColor" content="#505051">
